--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@descope/nextjs-sdk": "0.0.3-alpha.1",
+		"@descope/nextjs-sdk": "./descope-nextjs-sdk-0.0.3-alpha.1.tgz",
 		"next": "^13.5.3",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
